--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="/" class="header__link">
             <img src="./img/icon/logo.svg" alt="logo" class="header__logo">
         </a>
-        <nav class="header__nav">
+        <nav class="header__nav right">
             <ul class="header__list undotted">
                 <li class="header__list-item">
                     <a href="./page/blog.html" class="header__list-link">Blog</a>
@@ -147,86 +147,90 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.58601728222!2d-122.4236554651123!3d37.776304100000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809eb08736cb%3A0xd0499d3f418e942d!2zNzcgRmVsbCBTdCwgU2FuIEZyYW5jaXNjbywgQ0EgOTQxMDIsINCh0KjQkA!5e0!3m2!1sru!2sru!4v1668937738385!5m2!1sru!2sru" width="483" height="196" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </article>
     <footer class="footer">
-        <div class="footer__navigation container">
-            <p class="footer__navigation-title">Navigation</p>
-            <nav class="footer__navigation-nav">
-                <ul class="footer__navigation-nav-list undotted">
-                    <li class="footer__navigation-nav-list-item">
-                        <a href="#" class="footer__navigation-nav-list-item-link">About Us</a>
+        <div class="footer__wrapper container">
+            <div class="footer__navigation">
+                <p class="footer__navigation-title border">Navigation</p>
+                <nav class="footer__navigation-nav">
+                    <ul class="footer__navigation-nav-list undotted">
+                        <li class="footer__navigation-nav-list-item">
+                            <a href="#" class="footer__navigation-nav-list-item-link">About Us</a>
+                        </li>
+                        <li class="footer__navigation-nav-list-item">
+                            <a href="#" class="footer__navigation-nav-list-item-link">Blog</a>
+                        </li>
+                        <li class="footer__navigation-nav-list-item">
+                            <a href="#" class="footer__navigation-nav-list-item-link">Design Services</a>
+                        </li>
+                        <li class="footer__navigation-nav-list-item">
+                            <a href="#" class="footer__navigation-nav-list-item-link">Featured On</a>
+                        </li>
+                        <li class="footer__navigation-nav-list-item">
+                            <a href="#" class="footer__navigation-nav-list-item-link">2018 Holiday Catalog</a>
+                        </li>
+                        <li class="footer__navigation-nav-list-item">
+                            <a href="#" class="footer__navigation-nav-list-item-link">Shop By Designer</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footer_information">
+                <p class="footer_information-title border">Customer Information</p>
+                <nav class="footer_information-nav"> 
+                    <ul class="footer_information-nav-list undotted">
+                        <li class="footer_information-nav-list-item">
+                            <a href="#" class="footer_information-nav-list-item-link">Contact Us</a>
+                        </li>
+                        <li class="footer_information-nav-list-item">
+                            <a href="#" class="footer_information-nav-list-item-link">Sale Exclusions</a>
+                        </li>
+                        <li class="footer_information-nav-list-item">
+                            <a href="#" class="footer_information-nav-list-item-link">Shipping & Returns</a>
+                        </li>
+                        <li class="footer_information-nav-list-item">
+                            <a href="#" class="footer_information-nav-list-item-link">Terms & Conditions</a>
+                        </li>
+                        <li class="footer_information-nav-list-item">
+                            <a href="#" class="footer_information-nav-list-item-link">Privacy Policy</a>
+                        </li>
+                        <li class="footer_information-nav-list-item">
+                            <a href="#" class="footer_information-nav-list-item-link">Search</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footer__connect">
+                <p class="footer__connect-title footer__connect-border">Connect</p>
+                <div class="footer__connect-email">
+                    <input type="text" name="text" placeholder="Email" class="footer__connect-input">
+                    <button class="footer__connect-button">Join</button>
+                </div>
+                <ul class="footer__connect-list undotted">
+                    <li class="footer__connect-list-item">
+                        <a href="#" class="footer__connect-list-item-link">
+                            <img src="./img/icon/facebook.svg" alt="facebook" class="footer__connect-list-item-link-img">
+                        </a>
                     </li>
-                    <li class="footer__navigation-nav-list-item">
-                        <a href="#" class="footer__navigation-nav-list-item-link">Blog</a>
+                    <li class="footer__connect-list-item"> 
+                        <a href="#" class="footer__connect-list-item-link">
+                            <img src="./img/icon/twitter.svg" alt="twitter" class="footer__connect-list-item-link-img">
+                        </a>
                     </li>
-                    <li class="footer__navigation-nav-list-item">
-                        <a href="#" class="footer__navigation-nav-list-item-link">Design Services</a>
+                    <li class="footer__connect-list-item">
+                        <a href="#" class="footer__connect-list-item-link">
+                            <img src="./img/icon/pinterest.svg" alt="pinterest" class="footer__connect-list-item-link-img">
+                        </a>
                     </li>
-                    <li class="footer__navigation-nav-list-item">
-                        <a href="#" class="footer__navigation-nav-list-item-link">Featured On</a>
-                    </li>
-                    <li class="footer__navigation-nav-list-item">
-                        <a href="#" class="footer__navigation-nav-list-item-link">2018 Holiday Catalog</a>
-                    </li>
-                    <li class="footer__navigation-nav-list-item">
-                        <a href="#" class="footer__navigation-nav-list-item-link">Shop By Designer</a>
+                    <li class="footer__connect-list-item">
+                        <a href="#" class="footer__connect-list-item-link">
+                            <img src="./img/icon/instagram.svg" alt="instagram" class="footer__connect-list-item-link-img">
+                        </a>
                     </li>
                 </ul>
-            </nav>
-        </div>
-        <div class="footer_information container">
-            <p class="footer_information-title">Customer Information</p>
-            <nav class="footer_information-nav"> 
-                <ul class="footer_information-nav-list undotted">
-                    <li class="footer_information-nav-list-item">
-                        <a href="#" class="footer_information-nav-list-item-link">Contact Us</a>
-                    </li>
-                    <li class="footer_information-nav-list-item">
-                        <a href="#" class="footer_information-nav-list-item-link">Sale Exclusions</a>
-                    </li>
-                    <li class="footer_information-nav-list-item">
-                        <a href="#" class="footer_information-nav-list-item-link">Shipping & Returns</a>
-                    </li>
-                    <li class="footer_information-nav-list-item">
-                        <a href="#" class="footer_information-nav-list-item-link">Terms & Conditions</a>
-                    </li>
-                    <li class="footer_information-nav-list-item">
-                        <a href="#" class="footer_information-nav-list-item-link">Privacy Policy</a>
-                    </li>
-                    <li class="footer_information-nav-list-item">
-                        <a href="#" class="footer_information-nav-list-item-link">Search</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-        <div class="footer__connect container">
-            <p class="footer__connect-title">Connect</p>
-            <input type="text" name="text" placeholder="Email" class="footer__connect-input">
-            <button class="footer__connect-button">Join</button>
-            <ul class="footer__connect-list undotted">
-                <li class="footer__connect-list-item">
-                    <a href="#" class="footer__connect-list-item-link">
-                        <img src="./img/icon/facebook.svg" alt="facebook" class="footer__connect-list-item-link-img">
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="footer__connect-list-item-link">
-                        <img src="./img/icon/twitter.svg" alt="twitter" class="footer__connect-list-item-link-img">
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="footer__connect-list-item-link">
-                        <img src="./img/icon/pinterest.svg" alt="pinterest" class="footer__connect-list-item-link-img">
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="footer__connect-list-item-link">
-                        <img src="./img/icon/instagram.svg" alt="instagram" class="footer__connect-list-item-link-img">
-                    </a>
-                </li>
-            </ul>
+            </div>
         </div>
         <div class="footer__bottom container">
             <ul class="footer__bottom-list undotted">
-                <li class="footer__bottom-list-item">
+                <li class="footer__bottom-list-item footer__bottom-rating">
                     Company Rating 
                     <input type="radio" name="rating" value="1" checked class="footer__bottom-list-item-star">
                     <input type="radio" name="rating" value="1" class="footer__bottom-list-item-star">
@@ -234,7 +238,7 @@
                     <input type="radio" name="rating" value="1" class="footer__bottom-list-item-star">
                     <input type="radio" name="rating" value="1" class="footer__bottom-list-item-star">
                 </li>
-                <li class="footer__bottom-list-item">Copyright © 2018 Dlk • Design Life Kids</li>
+                <li class="footer__bottom-list-item footer__bottom-copyright">Copyright © 2018 Dlk • Design Life Kids</li>
                 <li class="footer__bottom-list-item transparent">Web Design — Direct Line Development</li>
             </ul>
         </div>
