--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/style/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&family=Montserrat:wght@700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,700;1,400&family=Montserrat:wght@200;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>DLK</title>
 </head>
 <body>
@@ -37,7 +37,7 @@
                 </a>
             </li>
             <li class="header__list-item">
-                <a href="./page/contact.html" class="header__list-link fatty">Contact Us</a>
+                <a href="./page/contact.html" class="header__list-link fatty">Contact  Us</a>
             </li>
         </ul>
     </header>
@@ -70,33 +70,34 @@
             <div class="collection__basement">
                 <p class="collection__sub-subtitle">Free (continental) USA shipping on all orders of $100 USD or more!</p>
             </div>
+            <img src="/img/monster.png" alt="monster" class="collection__img">
         </section>
         <section class="category container">
             <div class="category__products">
                 <h2 class="category__products-title">Category Products</h2>
                 <ul class="category__products-list undotted">
-                    <li class="category__products-list-item">
+                    <li class="category__products-list-item green">
                         <a href="#" class="category__products-list-item-link">
+                            <p class="category__products-list-item-text text-apparel">APPAREL KIDS</p>
                             <img src="./img/apparel_kids.png" alt="apparel kids" width="244" height="177" class="category__products-list-item-img">
-                            <p class="category__products-list-item-text">APPAREL KIDS</p>
                         </a>
                     </li>
-                    <li class="category__products-list-item">
+                    <li class="category__products-list-item brown">
                         <a href="#" class="category__products-list-item-link">
+                            <p class="category__products-list-item-text text-holiday">HOLIDAY SHOP</p>
                             <img src="./img/holiday_shop.png" alt="holiday shop" width="208" height="244" class="category__products-list-item-img">
-                            <p class="category__products-list-item-text">HOLIDAY SHOP</p>
                         </a>
                     </li>
-                    <li class="category__products-list-item">
+                    <li class="category__products-list-item beige">
                         <a href="#" class="category__products-list-item-link">
+                            <p class="category__products-list-item-text text-toys">TOYS</p>
                             <img src="./img/toys.png" alt="toys" width="270" height="270" class="category__products-list-item-img">
-                            <p class="category__products-list-item-text">TOYS</p>
                         </a>
                     </li>
-                    <li class="category__products-list-item">
-                        <a href="#" class="category__products-list-item-link">
+                    <li class="category__products-list-item blue">
+                        <a href="#" class="category__products-list-item-link text-accessories">
+                            <p class="category__products-list-item-text text-accessories">ACCESSORIES</p>
                             <img src="./img/accessories.png" alt="accessories" width="240" height="250" class="category__products-list-item-img">
-                            <p class="category__products-list-item-text">ACCESSORIES</p>
                         </a>
                     </li>
                 </ul>
@@ -115,11 +116,11 @@
             <img class="delivery__img" src="./img/dress.jpg" alt="dress" width="480" height="559">
             <div class="delivery__text">
                 <h2 class="delivery__text-title">Delivery</h2>
-                <p class="delivery__text-subtitle">Delivery</p>
+                <p class="delivery__text-subtitle delivery__weight background-blue">Delivery</p>
                 <p class="delivery__text-subtitle">Guarantee</p>
-                <p class="delivery__text-subtitle">Credit</p>
+                <p class="delivery__text-subtitle delivery__text-subtitle-margin">Credit</p>
                 <p class="delivery__text-description">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-                <p class="delivery__text-description">What started as an outlet to deal with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
+                <p class="delivery__text-description delivery__margin">What started as an outlet to deal with the traumatic loss of my husband, dlk has now become a truly happy place for me and i have you and all of the beautiful designers that we work with to thank!</p>
                 <a href="#" class="delivery__text-link">LEARN MORE</a>
             </div>
         </section>
@@ -140,17 +141,24 @@
             </ul>
         </section>
     </main>
-    <section class="design container">
-        <h2 class="design__title">Design Life Kids</h2>
-        <p class="design__subtitle">About Us</p>
-        <p class="design__subtitle">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-        <a href="#" class="design__link">buy now</a>
-    </section> 
-    <article class="contacts container">
-        <h2 class="contacts__title">Contacts</h2>
-        <p class="contacts__subtitle">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.58601728222!2d-122.4236554651123!3d37.776304100000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809eb08736cb%3A0xd0499d3f418e942d!2zNzcgRmVsbCBTdCwgU2FuIEZyYW5jaXNjbywgQ0EgOTQxMDIsINCh0KjQkA!5e0!3m2!1sru!2sru!4v1668937738385!5m2!1sru!2sru" width="483" height="196" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </article>
+    <div class="wrapper">
+        <section class="design container">
+            <div class="design__wrapper">
+                <div class="design__background"></div>
+                <h2 class="design__title">Design Life Kids</h2>
+                <p class="design__subtitle">About Us</p>
+                <p class="design__description">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
+                <a href="#" class="design__link">buy now</a>
+            </div>
+        </section> 
+        <article class="contacts container">
+            <div class="contacts__wrapper">
+                <h2 class="contacts__title">Contacts</h2>
+                <p class="contacts__subtitle">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.58601728222!2d-122.4236554651123!3d37.776304100000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809eb08736cb%3A0xd0499d3f418e942d!2zNzcgRmVsbCBTdCwgU2FuIEZyYW5jaXNjbywgQ0EgOTQxMDIsINCh0KjQkA!5e0!3m2!1sru!2sru!4v1668937738385!5m2!1sru!2sru" width="483" height="196" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </article>
+    </div>
     <footer class="footer">
         <div class="footer__wrapper container">
             <div class="footer__navigation">
