--- a/index.html
+++ b/index.html
@@ -141,21 +141,20 @@
             </ul>
         </section>
     </main>
-    <div class="wrapper">
-        <section class="design container">
+    <div class="wrapper container">
+        <section class="design">
             <div class="design__wrapper">
-                <div class="design__background"></div>
-                <h2 class="design__title">Design Life Kids</h2>
                 <p class="design__subtitle">About Us</p>
                 <p class="design__description">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
                 <a href="#" class="design__link">buy now</a>
+                <h2 class="design__title">Design Life Kids</h2>
             </div>
         </section> 
-        <article class="contacts container">
+        <article class="contacts">
             <div class="contacts__wrapper">
-                <h2 class="contacts__title">Contacts</h2>
                 <p class="contacts__subtitle">Some days i feel like i've been working on dlk my entire life and there are other days that i am completely shocked that four years have flown by. It's simply magical.</p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.58601728222!2d-122.4236554651123!3d37.776304100000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809eb08736cb%3A0xd0499d3f418e942d!2zNzcgRmVsbCBTdCwgU2FuIEZyYW5jaXNjbywgQ0EgOTQxMDIsINCh0KjQkA!5e0!3m2!1sru!2sru!4v1668937738385!5m2!1sru!2sru" width="483" height="196" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <h2 class="contacts__title">Contacts</h2>
             </div>
         </article>
     </div>
