исправление ошибок в валидаторе

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             </div>
         </section>
         <section class="awards container">
+            <h2 class="awards__title">Awards</h2>
             <ul class="awards__list undotted">
                 <li class="awards__list-item">
                     <img src="./img/mail.png" alt="mail" width="193" height="60" class="awards__list-item-img">
@@ -282,7 +283,7 @@
                     </div>
                     <div class="contact__main-message">
                         <p class="contact__main-label">Message</p>
-                        <textarea name="message" id="" cols="80" rows="10" class="contact__main-textarea"></textarea>
+                        <textarea name="message" cols="80" rows="10" class="contact__main-textarea"></textarea>
                     </div>
                     <div class="contact__main-personal">
                         <input id="personal" type="checkbox" class="contact__main-checkbox" checked>
